[19057] tags of uptup tile were changed to data from order output

--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -10,6 +10,7 @@
    "source": [
     "from pathlib import Path\n",
     "import os\n",
+    "import json\n",
     "\n",
     "import rasterio\n",
     "import shapely\n",
@@ -17,13 +18,11 @@
     "from planet_processing import PlanetOrderDownloader as PoD, PlanetVisualizer as Pv\n",
     "\n",
     "REQUEST_ID = 0\n",
-
     "AOI = 'POLYGON ((-85.483932 40.367801, -85.64349199999999 40.367801, -85.64349199999999 40.226597, -85.483932 40.226597, -85.483932 40.367801))'\n",
     "START_DATE = '2020-04-01'\n",
     "END_DATE = '2020-09-01'\n",
     "ORDER_ID = ''\n",
     "PLANET_API_KEY = ''"
-
    ]
   },
   {
@@ -99,8 +98,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open(downloader.download_path / 'results.json', 'r') as f:\n",
+    "            data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with rasterio.open(output_path, \"r+\") as dst:\n",
-    "        dst.update_tags(start_date=START_DATE, end_date=END_DATE, request_id=REQUEST_ID, name=Path(output_path).stem)\n",
+    "        dst.update_tags(start_date=data['created_on'].split('T')[0], end_date=data['created_on'].split('T')[0], request_id=REQUEST_ID, name=Path(output_path).stem)\n",
     "       "
    ]
   },
