21039/upd notebook and readme

--- a/data/notebooks/example/tci_ndvi_component/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi_component/TCI_NDVI.ipynb
@@ -86,7 +86,8 @@
     "OUTPUT_NDVI = os.path.join('/output', os.getenv('SIP_NDVI')) #Filename\n",
     "\n",
     "#NODATA\n",
-    "# OUTPUT_NODATA = os.path.join('/output', os.getenv('SIP_NODATA')) #Filename"
+    "# OUTPUT_NODATA = os.path.join('/output', os.getenv('SIP_NODATA')) #Filename\n",
+    "REQUEST_ID = \"_\""
    ]
   },
   {
@@ -614,7 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop(input_path, output_path, polygon, date, request_id, name=None, colormap=None):\n",
+    "def crop(input_path, output_path, polygon, date, name=None, colormap=None):\n",
     "    with rasterio.open(input_path) as src:\n",
     "        out_image, out_transform = rasterio.mask.mask(src, [polygon], crop=True)\n",
     "        # print(out_transform)\n",
@@ -627,7 +628,7 @@
     "                        nodata=0, )\n",
     "\n",
     "    with rasterio.open(output_path, \"w\", **out_meta) as dest:\n",
-    "        dest.update_tags(start_date=date, end_date=date, request_id=request_id)\n",
+    "        dest.update_tags(start_date=date, end_date=date)\n",
     "        if name:\n",
     "            dest.update_tags(name=name)\n",
     "        if colormap:\n",
@@ -725,7 +726,7 @@
     "            print(f'Tile {tmp_file} was removed or renamed, skipping')\n",
     "        \n",
     "    with rasterio.open(out_raster_path, \"w\", **meta) as dst:\n",
-    "        dst.update_tags(start_date=date, end_date=date, request_id=request_id)\n",
+    "        dst.update_tags(start_date=date, end_date=date)\n",
     "        if name:\n",
     "            dst.update_tags(name=name)\n",
     "        if colormap:\n",
@@ -748,7 +749,7 @@
     "    feature = Feature(geometry=polygon, properties=dict(label=NO_DATA, style=style))\n",
     "    feature['start_date'] = START_DATE\n",
     "    feature['end_date'] = END_DATE\n",
-    "    feature['request_id'] = REQUEST_ID\n",
+    "    # feature['request_id'] = REQUEST_ID\n",
     "    feature['name'] = TCI_NDVI_NO_DATA\n",
     "    \n",
     "    with open(geojson_path, 'w') as f:\n",
@@ -811,9 +812,9 @@
     "        transformed_poly = to_crs(polygon, tile_crs)\n",
     "        \n",
     "        # Crop and save NDVI\n",
-    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
+    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
     "        # Crop and save TCI\n",
-    "        crop(paths['TCI'], temp_tci_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 RGB raster\")\n",
+    "        crop(paths['TCI'], temp_tci_filename, transformed_poly, acquired_date, name=\"Sentinel-2 RGB raster\")\n",
     "        \n",
     "        print(f\"{tile}: End calculation TCI, NDVI\")\n",
     "    \n",
@@ -831,8 +832,8 @@
     "    # base_filename = f\"{REQUEST_ID}_{'-'.join(filtered.keys())}_{acquired_date}\"\n",
     "    # tci_full = stitch_tiles(tci_images, os.path.join(RESULTS_DIR, base_filename + \"_TCI.tif\"), acquired_date, REQUEST_ID, name=\"Sentinel-2 RGB raster\")\n",
     "    # ndvi_full = stitch_tiles(ndvi_images, os.path.join(RESULTS_DIR, base_filename + \"_NDVI.tif\"), acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
-    "    tci_full = stitch_tiles(tci_images, OUTPUT_TCI, acquired_date, REQUEST_ID, name=\"Sentinel-2 RGB raster\")\n",
-    "    ndvi_full = stitch_tiles(ndvi_images, OUTPUT_NDVI, acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
+    "    tci_full = stitch_tiles(tci_images, OUTPUT_TCI, acquired_date,  name=\"Sentinel-2 RGB raster\")\n",
+    "    ndvi_full = stitch_tiles(ndvi_images, OUTPUT_NDVI, acquired_date, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
     "    for i in range(len(tci_images)):\n",
     "        os.remove(tci_images[i])\n",
     "        os.remove(ndvi_images[i])"
