21039/made satellite cache optional

--- a/data/notebooks/example/tci_ndvi_component/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi_component/TCI_NDVI.ipynb
@@ -121,7 +121,9 @@
     "\n",
     "# NODATA and \n",
     "OUTPUT_NODATA = os.path.join('/output', os.getenv('SIP_NODATA')) #Folder\n",
-    "SATELLITE_CACHE = os.getenv('SIP_SATELLITE_CACHE') #Folder"
+    "\n",
+    "# OPTIONAL\n",
+    "SATELLITE_CACHE = os.getenv('SIP_SATELLITE_CACHE', 'satellite_cache') #Folder"
    ]
   },
   {
