--- a/data/notebooks/example/tci_ndvi_component/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi_component/TCI_NDVI.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c8b6559f",
    "metadata": {
     "execution": {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1da3110a",
    "metadata": {
     "execution": {
@@ -114,16 +114,14 @@
     "START_DATE = os.getenv(\"SIP_START_DATE\")\n",
     "END_DATE = os.getenv(\"SIP_END_DATE\")\n",
     "SENTINEL2_GOOGLE_API_KEY = os.getenv('SIP_SENTINEL2_GOOGLE_API_KEY')\n",
+    "SATELLITE_CACHE = os.getenv('SIP_SATELLITE_CACHE', 'satellite_cache') #Folder\n",
     "\n",
     "# Outputs\n",
     "OUTPUT_TCI = os.getenv('SIP_TCI') #Filename\n",
     "OUTPUT_NDVI = os.getenv('SIP_NDVI') #Filename\n",
     "\n",
     "# NODATA and \n",
-    "OUTPUT_NODATA = os.path.join('/output', os.getenv('SIP_NODATA')) #Folder\n",
-    "\n",
-    "# OPTIONAL\n",
-    "SATELLITE_CACHE = os.getenv('SIP_SATELLITE_CACHE', 'satellite_cache') #Folder"
+    "OUTPUT_NODATA = os.path.join('/output', os.getenv('SIP_NODATA')) #Folder\n"
    ]
   },
   {
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9e452a77",
    "metadata": {
     "execution": {
@@ -165,11 +163,13 @@
    },
    "outputs": [],
    "source": [
+    "SATELLITE_CACHE_FOLDER = os.path.join('/input', SATELLITE_CACHE) #Folder\n",
+    "\n",
     "OUTPUT_TCI_FILE = os.path.join('/output', OUTPUT_TCI) #Filename\n",
     "OUTPUT_NDVI_FILE = os.path.join('/output', OUTPUT_NDVI) #Filename\n",
     "\n",
     "OUTPUT_NODATA_FOLDER = os.path.join('/output', OUTPUT_NODATA) #Folder\n",
-    "SATELLITE_CACHE_FOLDER = os.path.join('/temp', SATELLITE_CACHE) #Folder\n",
+    "\n",
     "\n",
     "if not os.path.exists(OUTPUT_NODATA_FOLDER):\n",
     "    os.mkdir(OUTPUT_NODATA_FOLDER)"
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a8d1945c",
    "metadata": {
     "execution": {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1bc7cb5b",
    "metadata": {
     "execution": {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e6bb2027",
    "metadata": {
     "execution": {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7ff674f8",
    "metadata": {
     "execution": {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "569c0ae0",
    "metadata": {
     "execution": {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "abfd0c28",
    "metadata": {
     "execution": {
@@ -425,52 +425,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tile</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>16TFK</td>\n",
-       "      <td>POLYGON Z ((-85.29909 40.33937 0.00000, -85.15...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    tile                                           geometry\n",
-       "0  16TFK  POLYGON Z ((-85.29909 40.33937 0.00000, -85.15..."
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "overlap_tiles = get_intersected_tiles(aoi.copy(), sentinel_grid.copy())\n",
     "overlap_tiles"
@@ -478,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3f809250",
    "metadata": {
     "execution": {
@@ -496,28 +451,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Geographic 2D CRS: EPSG:4326>\n",
-       "Name: WGS 84\n",
-       "Axis Info [ellipsoidal]:\n",
-       "- Lat[north]: Geodetic latitude (degree)\n",
-       "- Lon[east]: Geodetic longitude (degree)\n",
-       "Area of Use:\n",
-       "- name: World\n",
-       "- bounds: (-180.0, -90.0, 180.0, 90.0)\n",
-       "Datum: World Geodetic System 1984\n",
-       "- Ellipsoid: WGS 84\n",
-       "- Prime Meridian: Greenwich"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "overlap_tiles.crs"
    ]
@@ -541,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e6faa883",
    "metadata": {
     "execution": {
@@ -573,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "420a2773",
    "metadata": {
     "execution": {
@@ -591,25 +525,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2020-07-01'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "START_DATE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "64cfd3e8",
    "metadata": {
     "execution": {
@@ -627,25 +550,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2020-08-01'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "END_DATE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "071061f6",
    "metadata": {
     "execution": {
@@ -690,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "72d1feab",
    "metadata": {
     "execution": {
@@ -715,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e7c1cf66",
    "metadata": {
     "execution": {
@@ -740,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e9bdf6fc",
    "metadata": {
     "execution": {
@@ -800,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "654d6443",
    "metadata": {
     "execution": {
@@ -818,29 +730,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading images for tile: 16TFK...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For tile: 16TFK and dates 2020-07-01 2020-08-01 proper images not found! Shift dates to 2020-06-01 2020-07-01!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading images for tile 16TFK finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loadings = load_images(overlap_tiles.tile.values, START_DATE, END_DATE)"
    ]
@@ -864,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "b5aeb9b1",
    "metadata": {
     "execution": {
@@ -917,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "309c3a15",
    "metadata": {
     "execution": {
@@ -959,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "3d1855e7",
    "metadata": {
     "execution": {
@@ -1005,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "6af971c1",
    "metadata": {
     "execution": {
@@ -1038,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ea37748c",
    "metadata": {
     "execution": {
@@ -1063,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "b004f3ba",
    "metadata": {
     "execution": {
@@ -1081,25 +971,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(256, 3)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "COLORS.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "14d73568",
    "metadata": {
     "execution": {
@@ -1117,18 +996,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"name\": \"Vegetation index\", \"colors\": [\"0,0,0\", \"3,1,1\", \"5,1,1\", \"8,1,1\", \"10,1,1\", \"13,1,1\", \"16,1,1\", \"18,1,1\", \"21,1,1\", \"23,1,1\", \"26,1,1\", \"29,1,1\", \"31,1,1\", \"34,1,1\", \"36,1,1\", \"39,1,1\", \"42,1,1\", \"44,1,1\", \"47,1,1\", \"49,1,1\", \"52,1,1\", \"54,1,1\", \"57,1,1\", \"60,1,1\", \"62,1,1\", \"65,1,1\", \"67,1,1\", \"70,1,1\", \"73,1,1\", \"75,1,1\", \"78,1,1\", \"80,1,1\", \"83,1,1\", \"86,1,1\", \"88,1,1\", \"91,1,1\", \"93,1,1\", \"96,1,1\", \"99,1,1\", \"101,1,1\", \"104,1,1\", \"106,1,1\", \"109,1,1\", \"112,1,1\", \"114,1,1\", \"117,1,1\", \"119,1,1\", \"122,1,1\", \"125,1,1\", \"127,1,1\", \"130,1,1\", \"132,1,1\", \"135,1,1\", \"137,1,1\", \"140,1,1\", \"143,1,1\", \"145,1,1\", \"148,1,1\", \"150,1,1\", \"153,1,1\", \"156,1,1\", \"158,1,1\", \"161,1,1\", \"163,1,1\", \"166,1,1\", \"167,2,1\", \"168,3,1\", \"169,4,1\", \"170,5,1\", \"171,6,1\", \"173,8,1\", \"174,9,1\", \"175,10,1\", \"176,11,1\", \"177,13,1\", \"178,14,1\", \"180,15,1\", \"181,16,1\", \"182,17,1\", \"183,19,1\", \"184,20,1\", \"185,21,1\", \"187,22,1\", \"188,24,1\", \"189,25,1\", \"190,26,1\", \"191,27,1\", \"192,28,1\", \"194,30,1\", \"195,31,1\", \"196,32,1\", \"197,33,1\", \"198,35,1\", \"199,36,1\", \"201,37,1\", \"202,38,1\", \"203,39,1\", \"204,41,1\", \"205,42,1\", \"206,43,1\", \"208,44,1\", \"209,46,1\", \"210,47,1\", \"211,48,1\", \"212,49,1\", \"213,50,1\", \"215,52,1\", \"216,53,1\", \"217,54,1\", \"218,55,1\", \"219,57,1\", \"220,58,1\", \"222,59,1\", \"223,60,1\", \"224,62,1\", \"225,63,1\", \"226,64,1\", \"227,65,1\", \"228,66,1\", \"230,68,1\", \"231,69,1\", \"232,70,1\", \"233,71,1\", \"234,73,1\", \"235,74,1\", \"237,75,1\", \"238,76,1\", \"239,77,1\", \"240,79,1\", \"240,82,1\", \"240,85,1\", \"240,87,1\", \"240,90,1\", \"240,93,1\", \"240,95,1\", \"240,98,1\", \"240,101,1\", \"241,103,1\", \"241,106,1\", \"241,108,1\", \"241,111,1\", \"241,114,1\", \"241,116,1\", \"241,119,1\", \"241,122,1\", \"241,124,1\", \"242,127,1\", \"242,130,1\", \"242,132,1\", \"242,135,1\", \"242,138,1\", \"242,140,1\", \"242,143,1\", \"242,145,1\", \"242,148,1\", \"243,151,1\", \"243,153,1\", \"243,156,1\", \"243,159,1\", \"243,161,1\", \"243,164,1\", \"243,167,1\", \"243,169,1\", \"243,172,1\", \"244,174,1\", \"244,177,1\", \"244,180,1\", \"244,182,1\", \"244,185,1\", \"244,188,1\", \"244,190,1\", \"244,193,1\", \"244,196,1\", \"245,198,1\", \"245,201,1\", \"245,204,1\", \"245,206,1\", \"245,209,1\", \"245,211,1\", \"245,214,1\", \"245,217,1\", \"245,219,1\", \"245,222,1\", \"246,225,1\", \"246,227,1\", \"246,230,1\", \"246,233,1\", \"246,235,1\", \"246,238,1\", \"246,241,1\", \"246,243,1\", \"246,246,1\", \"244,245,1\", \"240,244,1\", \"236,243,1\", \"232,241,1\", \"228,240,1\", \"224,239,1\", \"220,237,1\", \"217,236,1\", \"213,235,1\", \"209,233,1\", \"205,232,1\", \"201,231,1\", \"197,229,1\", \"193,228,1\", \"189,226,1\", \"186,225,1\", \"182,224,1\", \"178,222,1\", \"174,221,1\", \"170,220,1\", \"166,218,1\", \"162,217,1\", \"159,216,1\", \"155,214,1\", \"151,213,1\", \"147,212,1\", \"143,210,1\", \"139,209,1\", \"135,207,1\", \"131,206,1\", \"128,205,1\", \"124,203,1\", \"120,202,1\", \"116,201,1\", \"112,199,1\", \"108,198,1\", \"104,197,1\", \"101,195,1\", \"97,194,1\", \"93,193,1\", \"89,191,1\", \"85,190,1\", \"81,188,1\", \"77,187,1\", \"73,186,1\", \"70,184,1\", \"66,183,1\", \"62,182,1\", \"58,180,1\", \"54,179,1\", \"50,178,1\", \"46,176,1\", \"43,175,1\", \"39,174,1\", \"35,172,1\", \"31,171,1\", \"27,169,1\", \"23,168,1\", \"19,167,1\", \"15,165,1\", \"12,164,1\", \"8,163,1\", \"4,161,1\", \"1,160,1\"], \"labels\": [\"low\", \"high\"]}'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "colormap_tag = {\"name\": \"Vegetation index\", \"colors\": [], \"labels\": [\"low\", \"high\"]}\n",
     "\n",
@@ -1144,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "dca5c746",
    "metadata": {
     "execution": {
@@ -1177,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "07c12274",
    "metadata": {
     "execution": {
@@ -1205,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "9a65269e",
    "metadata": {
     "execution": {
@@ -1257,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "5ac4ef05",
    "metadata": {
     "execution": {
@@ -1286,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1fc6417e",
    "metadata": {
     "execution": {
@@ -1329,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "87965acf",
    "metadata": {
     "execution": {
@@ -1385,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "6e2b7e5a",
    "metadata": {
     "execution": {
@@ -1461,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "a3074baa",
    "metadata": {
     "execution": {
@@ -1515,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "3788e04f",
    "metadata": {
     "execution": {
@@ -1533,32 +1401,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16TFK: Start calculation TCI, NDVI\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16TFK: End calculation TCI, NDVI\n",
-      "16TFK: Rename /temp/16TFK_20200611_NDVI.tif.temp->/temp/16TFK_20200611_NDVI.tif\n",
-      " /temp/16TFK_20200611_TCI.tif.temp->/temp/16TFK_20200611_TCI.tif\n",
-      "saved raster /output/TCI_test_tif\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved raster /output/NDVI_test_tif\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not filtered:\n",
     "    geojson_path = os.path.join(OUTPUT_NODATA_FOLDER, \"aoi.geojson\")\n",
@@ -1647,7 +1490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.7.7"
   },
   "papermill": {
    "default_parameters": {},
