21039/got rid off SIP pref in notebook

--- a/data/notebooks/example/tci_ndvi_component/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi_component/TCI_NDVI.ipynb
@@ -110,18 +110,18 @@
    "outputs": [],
    "source": [
     "# Inputs\n",
-    "AOI = os.getenv('SIP_AOI')\n",
-    "START_DATE = os.getenv(\"SIP_START_DATE\")\n",
-    "END_DATE = os.getenv(\"SIP_END_DATE\")\n",
-    "SENTINEL2_GOOGLE_API_KEY = os.getenv('SIP_SENTINEL2_GOOGLE_API_KEY')\n",
-    "SATELLITE_CACHE = os.getenv('SIP_SATELLITE_CACHE', 'satellite_cache') #Folder\n",
+    "AOI = os.getenv('AOI')\n",
+    "START_DATE = os.getenv(\"START_DATE\")\n",
+    "END_DATE = os.getenv(\"END_DATE\")\n",
+    "SENTINEL2_GOOGLE_API_KEY = os.getenv('SENTINEL2_GOOGLE_API_KEY')\n",
+    "SATELLITE_CACHE = os.getenv('SATELLITE_CACHE', 'satellite_cache') #Folder\n",
     "\n",
     "# Outputs\n",
-    "OUTPUT_TCI = os.getenv('SIP_TCI') #Filename\n",
-    "OUTPUT_NDVI = os.getenv('SIP_NDVI') #Filename\n",
+    "OUTPUT_TCI = os.getenv('TCI') #Filename\n",
+    "OUTPUT_NDVI = os.getenv('NDVI') #Filename\n",
     "\n",
     "# NODATA and \n",
-    "OUTPUT_NODATA = os.path.join('/output', os.getenv('SIP_NODATA')) #Folder\n"
+    "OUTPUT_NODATA = os.path.join('/output', os.getenv('NODATA')) #Folder\n"
    ]
   },
   {
