21039/changed notebook and readme according to new requirements

--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -84,7 +84,7 @@
    },
    "source": [
     "### 0. Setting up parameters\n",
-    "#### Read Input and Output from environment"
+    "#### Read Input from environment and setup output folders and filenames"
    ]
   },
   {
@@ -114,13 +114,15 @@
     "START_DATE = os.getenv(\"START_DATE\")\n",
     "END_DATE = os.getenv(\"END_DATE\")\n",
     "SENTINEL2_GOOGLE_API_KEY = os.getenv('SENTINEL2_GOOGLE_API_KEY')\n",
-    "SATELLITE_CACHE_FOLDER = os.getenv('SATELLITE_CACHE')\n",
+    "SATELLITE_CACHE_FOLDER = os.getenv('SENTINEL2_CACHE')\n",
     "\n",
-    "# Outputs\n",
-    "OUTPUT_TCI_FILE = os.getenv('TCI')\n",
-    "OUTPUT_NDVI_FILE = os.getenv('NDVI')\n",
+    "# Output folder\n",
+    "OUTPUT_FOLDER = os.getenv('OUTPUT_FOLDER')\n",
     "\n",
-    "OUTPUT_NODATA_FOLDER = os.getenv('NODATA')\n",
+    "\n",
+    "OUTPUT_NODATA_FOLDER = os.path.join(OUTPUT_FOLDER, \"/nodata\")\n",
+    "OUTPUT_TCI_FILE = os.path.join(OUTPUT_FOLDER, \"TCI.tif\")\n",
+    "OUTPUT_NDVI_FILE = os.path.join(OUTPUT_FOLDER, \"NDVI.tif\")\n",
     "\n",
     "os.makedirs(OUTPUT_NODATA_FOLDER, exist_ok=True)"
    ]
