--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -447,7 +447,6 @@
    },
    "outputs": [],
    "source": [
-    "API_KEY = os.path.join('/input', SENTINEL2_GOOGLE_API_KEY)\n",
     "LOAD_DIR = SATELLITE_CACHE_FOLDER\n",
     "\n",
     "PRODUCT_TYPE = 'L2A'\n",
@@ -625,7 +624,7 @@
    "outputs": [],
    "source": [
     "def load_images(tiles, start_date, end_date):\n",
-    "    loader = Sentinel2Downloader(API_KEY)\n",
+    "    loader = Sentinel2Downloader(SENTINEL2_GOOGLE_API_KEY)\n",
     "    loadings = dict()\n",
     "        \n",
     "    for tile in tiles:\n",
