21139/fix TCI_NDVI notebook to work with new executor

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "API_KEY = SENTINEL2_GOOGLE_API_KEY\n",
-    "LOAD_DIR = os.path.join(BASE, \"satellite_imagery\")\n",
+    "LOAD_DIR = SENTINEL2_CACHE\n",
     "\n",
     "PRODUCT_TYPE = 'L2A'\n",
     "BANDS = {'TCI', 'B04', 'B08', }\n",
