21079-21139/modify executors to run notebooks&components

--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -109,22 +109,13 @@
    },
    "outputs": [],
    "source": [
-    "# Inputs\n",
-    "AOI = os.getenv('AOI')\n",
-    "START_DATE = os.getenv(\"START_DATE\")\n",
-    "END_DATE = os.getenv(\"END_DATE\")\n",
-    "SENTINEL2_GOOGLE_API_KEY = os.getenv('SENTINEL2_GOOGLE_API_KEY')\n",
-    "SATELLITE_CACHE_FOLDER = os.getenv('SENTINEL2_CACHE')\n",
-    "\n",
-    "# Output folder\n",
-    "OUTPUT_FOLDER = os.getenv('OUTPUT_FOLDER')\n",
-    "\n",
-    "\n",
-    "OUTPUT_NODATA_FOLDER = os.path.join(OUTPUT_FOLDER, \"/nodata\")\n",
-    "OUTPUT_TCI_FILE = os.path.join(OUTPUT_FOLDER, \"TCI.tif\")\n",
-    "OUTPUT_NDVI_FILE = os.path.join(OUTPUT_FOLDER, \"NDVI.tif\")\n",
-    "\n",
-    "os.makedirs(OUTPUT_NODATA_FOLDER, exist_ok=True)"
+    "REQUEST_ID=os.getenv('REQUEST_ID')\n",
+    "START_DATE=os.getenv('START_DATE')\n",
+    "END_DATE=os.getenv('END_DATE')\n",
+    "AOI=os.getenv('AOI')\n",
+    "SENTINEL2_GOOGLE_API_KEY=os.getenv('SENTINEL2_GOOGLE_API_KEY')\n",
+    "SATELLITE_CACHE_FOLDER=os.getenv('SENTINEL2_CACHE')\n",
+    "OUTPUT_FOLDER=os.getenv('OUTPUT_FOLDER')"
    ]
   },
   {
@@ -1400,8 +1391,9 @@
     "        print(f\"{tile}: Cannot calculate TCI, NDVI: {str(e)}\")\n",
     "\n",
     "if tci_images:\n",
-    "    tci_full = stitch_tiles(tci_images, OUTPUT_TCI_FILE, acquired_date,  name=\"Sentinel-2 RGB raster\")\n",
-    "    ndvi_full = stitch_tiles(ndvi_images, OUTPUT_NDVI_FILE, acquired_date, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
+    "    base_filename = f\"{REQUEST_ID}_{'-'.join(filtered.keys())}_{acquired_date}\"\n",
+    "    tci_full = stitch_tiles(tci_images, os.path.join(OUTPUT_FOLDER, base_filename + \"_TCI.tif\"), acquired_date,  name=\"Sentinel-2 RGB raster\")\n",
+    "    ndvi_full = stitch_tiles(ndvi_images, os.path.join(OUTPUT_FOLDER, base_filename + \"_NDVI.tif\"), acquired_date, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
     "    for i in range(len(tci_images)):\n",
     "        os.remove(tci_images[i])\n",
     "        os.remove(ndvi_images[i])"
@@ -1441,7 +1433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.7.7"
   },
   "papermill": {
    "default_parameters": {},
