--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -59,6 +59,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 0. Setting-up folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 1. Transform AOI and get bound_box"
    ]
   },
@@ -243,8 +257,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = os.path.join(BASE, \".secret/sentinel2_google_api_key.json\")\n",
-    "LOAD_DIR = os.path.join(BASE, \"satellite_imagery\")\n",
+    "API_KEY = SENTINEL2_GOOGLE_API_KEY\n",
+    "LOAD_DIR = SENTINEL2_CACHE\n",
     "\n",
     "PRODUCT_TYPE = 'L2A'\n",
     "BANDS = {'TCI', 'B04', 'B08', }\n",
@@ -428,9 +442,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR = os.path.join(BASE, \"results/example/tci_ndvi\")\n",
+    "RESULTS_DIR = OUTPUT_FOLDER\n",
     "\n",
-    "NOTEBOOK_DIR = os.path.join(BASE, \"notebooks/example/tci_ndvi\")\n",
+    "NOTEBOOK_DIR = os.path.join(RESULTS_DIR, \"notebook\")\n",
     "COLORMAP_BRBG = os.path.join(NOTEBOOK_DIR, \"ndvi_colormap.npy\") "
    ]
   },
@@ -734,8 +748,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR = os.path.join(RESULTS_DIR, str(REQUEST_ID))\n",
-    "RESULTS_DIR"
+    "# RESULTS_DIR = os.path.join(RESULTS_DIR, str(REQUEST_ID))\n",
+    "# RESULTS_DIR"
    ]
   },
   {
@@ -810,9 +824,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python37",
+   "display_name": "Python 3.7.7 ('venv': venv)",
    "language": "python",
-   "name": "python37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -824,7 +838,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "50edd631a3a560ea7324d5c52966dd3e43b748ed4c5045c62a87154f45d21dc5"
+   }
   }
  },
  "nbformat": 4,
