21139/small fixes to TCI_NDVI notebook to fit environment

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -444,8 +444,7 @@
    "source": [
     "RESULTS_DIR = OUTPUT_FOLDER\n",
     "\n",
-    "NOTEBOOK_DIR = os.path.join(RESULTS_DIR, \"notebook\")\n",
-    "COLORMAP_BRBG = os.path.join(NOTEBOOK_DIR, \"ndvi_colormap.npy\") "
+    "COLORMAP_BRBG = \"ndvi_colormap.npy\""
    ]
   },
   {
