21618/upd tci_ndvi example component

--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -119,6 +119,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "51789533",
    "metadata": {
@@ -132,7 +133,7 @@
     "tags": []
    },
    "source": [
-    "#### 1. Transform AOI and get bound_box"
+    "#### 1. Transform AOI got GeoJSON file"
    ]
   },
   {
@@ -157,7 +158,9 @@
    },
    "outputs": [],
    "source": [
-    "aoi = gp.GeoDataFrame(geometry=[wkt.loads(AOI)], crs=\"epsg:4326\")    "
+    "aoi = gp.GeoDataFrame(geometry=[wkt.loads(AOI)], crs=\"epsg:4326\")\n",
+    "aoi_filename = \"provided_aoi.geojson\"\n",
+    "aoi.to_file(aoi_filename, driver=\"GeoJSON\") "
    ]
   },
   {
@@ -205,152 +208,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6bb2027",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:16.808929Z",
-     "iopub.status.busy": "2022-11-12T16:40:16.808342Z",
-     "iopub.status.idle": "2022-11-12T16:40:16.820837Z",
-     "shell.execute_reply": "2022-11-12T16:40:16.819560Z"
-    },
-    "papermill": {
-     "duration": 0.037581,
-     "end_time": "2022-11-12T16:40:16.824235",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:16.786654",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def epsg_code(longitude, latitude):\n",
-    "        \"\"\"\n",
-    "        Generates EPSG code from lon, lat\n",
-    "        :param longitude: float\n",
-    "        :param latitude: float\n",
-    "        :return: int, EPSG code\n",
-    "        \"\"\"\n",
-    "\n",
-    "        def _zone_number(lat, lon):\n",
-    "            if 56 <= lat < 64 and 3 <= lon < 12:\n",
-    "                return 32\n",
-    "            if 72 <= lat <= 84 and lon >= 0:\n",
-    "                if lon < 9:\n",
-    "                    return 31\n",
-    "                elif lon < 21:\n",
-    "                    return 33\n",
-    "                elif lon < 33:\n",
-    "                    return 35\n",
-    "                elif lon < 42:\n",
-    "                    return 37\n",
-    "\n",
-    "            return int((lon + 180) / 6) + 1\n",
-    "\n",
-    "        zone = _zone_number(latitude, longitude)\n",
-    "\n",
-    "        if latitude > 0:\n",
-    "            return 32600 + zone\n",
-    "        else:\n",
-    "            return 32700 + zone"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ff674f8",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:16.859573Z",
-     "iopub.status.busy": "2022-11-12T16:40:16.859092Z",
-     "iopub.status.idle": "2022-11-12T16:40:16.868866Z",
-     "shell.execute_reply": "2022-11-12T16:40:16.867440Z"
-    },
-    "papermill": {
-     "duration": 0.031061,
-     "end_time": "2022-11-12T16:40:16.871996",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:16.840935",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def _intersect(aoi, grid):\n",
-    "    # Get the indices of the tiles that are likely to be inside the bounding box of the given Polygon\n",
-    "    geometry = aoi.geometry[0]\n",
-    "\n",
-    "    tiles_indexes = list(grid.sindex.intersection(geometry.bounds))\n",
-    "    grid = grid.loc[tiles_indexes]\n",
-    "\n",
-    "    # Make the precise tiles in Polygon query\n",
-    "    grid = grid.loc[grid.intersects(geometry)]\n",
-    "\n",
-    "    # intersection area\n",
-    "    epsg = epsg_code(geometry.centroid.x, geometry.centroid.y)\n",
-    "\n",
-    "    # to UTM projection in meters\n",
-    "    aoi.to_crs(epsg=epsg, inplace=True)\n",
-    "    grid.to_crs(epsg=epsg, inplace=True)\n",
-    "\n",
-    "    return grid, epsg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "569c0ae0",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:16.910910Z",
-     "iopub.status.busy": "2022-11-12T16:40:16.909933Z",
-     "iopub.status.idle": "2022-11-12T16:40:16.926880Z",
-     "shell.execute_reply": "2022-11-12T16:40:16.925459Z"
-    },
-    "papermill": {
-     "duration": 0.043339,
-     "end_time": "2022-11-12T16:40:16.930933",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:16.887594",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def get_intersected_tiles(aoi, grid):\n",
-    "    \n",
-    "    grid, epsg = _intersect(aoi, sentinel_grid)\n",
-    "    \n",
-    "    \n",
-    "    grid.set_index(\"Name\", drop=False, inplace=True)    \n",
-    "    intersected_grid = {\"tile\": [], \"geometry\": []}\n",
-    "\n",
-    "    rest_aoi = aoi.copy()\n",
-    "    while rest_aoi.area.sum() > 0:\n",
-    "        intersection = gp.overlay(rest_aoi, grid, how=\"intersection\")\n",
-    "        argmax = intersection.area.argmax()\n",
-    "\n",
-    "        tile = intersection.loc[argmax, \"Name\"]\n",
-    "        intersected_geometry = intersection.loc[argmax, \"geometry\"]\n",
-    "        \n",
-    "        intersected_grid[\"tile\"].append(tile)\n",
-    "        intersected_grid[\"geometry\"].append(intersected_geometry)\n",
-    "        \n",
-    "        biggest_intersection = grid.loc[[tile]]\n",
-    "        rest_aoi = gp.overlay(rest_aoi, biggest_intersection, how=\"difference\")\n",
-    "        grid = grid.loc[intersection[\"Name\"]]\n",
-    "    \n",
-    "    overlap_tiles = gp.GeoDataFrame(intersected_grid, crs=epsg)\n",
-    "    overlap_tiles.to_crs(epsg=4326, inplace=True)\n",
-    "\n",
-    "    return overlap_tiles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "abfd0c28",
    "metadata": {
     "execution": {
@@ -370,33 +227,8 @@
    },
    "outputs": [],
    "source": [
-    "overlap_tiles = get_intersected_tiles(aoi.copy(), sentinel_grid.copy())\n",
-    "overlap_tiles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f809250",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:26.114682Z",
-     "iopub.status.busy": "2022-11-12T16:40:26.113524Z",
-     "iopub.status.idle": "2022-11-12T16:40:26.124994Z",
-     "shell.execute_reply": "2022-11-12T16:40:26.123281Z"
-    },
-    "papermill": {
-     "duration": 0.037953,
-     "end_time": "2022-11-12T16:40:26.128944",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:26.090991",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "overlap_tiles.crs"
+    "s2overlap = Sentinel2Overlap(aoi_path=aoi_filename)\n",
+    "overlap_tiles = s2overlap.overlap()"
    ]
   },
   {
@@ -674,7 +506,7 @@
    },
    "outputs": [],
    "source": [
-    "loadings = load_images(overlap_tiles.tile.values, START_DATE, END_DATE)"
+    "loadings = load_images(overlap_tiles, START_DATE, END_DATE)"
    ]
   },
   {
@@ -1419,7 +1251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 ('venv': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1433,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "papermill": {
    "default_parameters": {},
@@ -1449,7 +1281,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "50edd631a3a560ea7324d5c52966dd3e43b748ed4c5045c62a87154f45d21dc5"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
