21618/upd tci_ndvi component to rid off sentinel2grid.geojson

--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -164,31 +164,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bc7cb5b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:09.644237Z",
-     "iopub.status.busy": "2022-11-12T16:40:09.640548Z",
-     "iopub.status.idle": "2022-11-12T16:40:16.725320Z",
-     "shell.execute_reply": "2022-11-12T16:40:16.723843Z"
-    },
-    "papermill": {
-     "duration": 7.115311,
-     "end_time": "2022-11-12T16:40:16.728772",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:09.613461",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "sentinel_grid = gp.read_file(os.path.join('/code', \"sentinel2grid.geojson\"))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3d301cb7",
    "metadata": {
@@ -228,7 +203,7 @@
    "outputs": [],
    "source": [
     "s2overlap = Sentinel2Overlap(aoi_path=aoi_filename)\n",
-    "overlap_tiles = s2overlap.overlap()"
+    "overlap_tiles = s2overlap.overlap_with_geometry()"
    ]
   },
   {
@@ -506,7 +481,7 @@
    },
    "outputs": [],
    "source": [
-    "loadings = load_images(overlap_tiles, START_DATE, END_DATE)"
+    "loadings = load_images(overlap_tiles.Name.values, START_DATE, END_DATE)"
    ]
   },
   {
@@ -1178,7 +1153,7 @@
    "outputs": [],
    "source": [
     "if not filtered:\n",
-    "    geojson_path = os.path.join(OUTPUT_NODATA_FOLDER, \"aoi.geojson\")\n",
+    "    geojson_path = os.path.join(OUTPUT_FOLDER, \"aoi.geojson\")\n",
     "    dump_no_data_geosjon(aoi.geometry[0], geojson_path)    \n",
     "    raise ValueError(\"Images not loaded for given AOI. Change dates, constraints\")\n",
     "\n",
@@ -1186,10 +1161,10 @@
     "tci_images = []\n",
     "ndvi_images = []\n",
     "for row in overlap_tiles.itertuples():\n",
-    "    tile = row.tile\n",
+    "    tile = row.Name\n",
     "    polygon = row.geometry\n",
     "    if not tile in filtered:\n",
-    "        tile_geojson_path = os.path.join(OUTPUT_NODATA_FOLDER, \"%s_aoi.geojson\" % tile)\n",
+    "        tile_geojson_path = os.path.join(OUTPUT_FOLDER, \"%s_aoi.geojson\" % tile)\n",
     "        print(\"No data loaded for tile\", tile)\n",
     "        dump_no_data_geosjon(polygon, tile_geojson_path)    \n",
     "    \n",
