--- a/tutorials/setup_on_instance.ipynb
+++ b/tutorials/setup_on_instance.ipynb
@@ -205,7 +205,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Figure 2a](images/t1fig2a.png) | ![Figure 2b](images/t1fig2b.png) "
+    "<table><tr>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "<td> <img src=\"images/t1fig2a.png\" alt=\"Figure 2a\"> </td>\n",
+    "<td> <img src=\"images/t1fig2b.png\" alt=\"Figure 2b\"> </td>\n",
+    "</tr></table>"
    ]
   },
   {
@@ -229,7 +241,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "To run a model, you should make an order with GeoAP`s Graphic User Interface. To do it, you should first add  a new area:\n",
     "1. Open the area management menu at the top left of the screen. \n",
     "2. Click the “Add new area”  button.\n",
@@ -243,7 +254,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Figure 3a](images/t1fig3a.png) | ![Figure 3b](images/t1fig3b.png) "
+    "<table><tr>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "<td> <img src=\"images/t1fig3a.png\" alt=\"Figure 3a\"> </td>\n",
+    "<td> <img src=\"images/t1fig3b.png\" alt=\"Figure 3b\"> </td>\n",
+    "</tr></table>\n"
    ]
   },
   {
@@ -264,8 +287,7 @@
     "2. At the bottom please click on \"Create new\".\n",
     "3. Select your component.\n",
     "4. After selecting a layer, you will be able to select a period for analysis. Here you select the date range for which satellite images will be downloaded (Figure 4b).\n",
-    "5. Once you are done, click \"Save Changes\". This will send a request to create a report. \n",
-    "\n"
+    "5. Once you are done, click \"Save Changes\". This will send a request to create a report. "
    ]
   },
   {
@@ -285,8 +307,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Figure 4a](images/t1fig4a.png) | ![Figure 4b](images/t1fig4b.png) | ![Figure 4c](images/t1fig4c.png) \n",
-    "\n"
+    "<table>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 350px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "<tr>\n",
+    "<td> <img src=\"images/t1fig4a.png\" alt=\"Figure 4a\"> </td>\n",
+    "<td> <img src=\"images/t1fig4b.png\" alt=\"Figure 4b\"> </td>\n",
+    "<td> <img src=\"images/t1fig4c.png\" alt=\"Figure 4c\"> </td>\n",
+    "</tr>\n",
+    "<td> a. Opening reports tab</td>\n",
+    "<td> b. Specifying options</td>\n",
+    "<td> c. Pending requests</td>\n",
+    "</table>"
    ]
   },
   {
@@ -304,11 +342,6 @@
    "source": [
     "Once the report is complete, you will see the results in \"Created results\". There will be two results for this model - NDVI and Sentinel-2 RGB raster. First, NDVI will appear in \"Created results\", and then Sentinel-2 raster."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
