--- a/tutorials/user_manual.ipynb
+++ b/tutorials/user_manual.ipynb
@@ -17,11 +17,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Figure 1](images/t2fig1.png)"
+   ]
   },
   {
    "attachments": {},
@@ -50,11 +51,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<table><tr>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "<td> <img src=\"images/t2fig2a.png\" alt=\"Figure 2a\"> </td>\n",
+    "<td> <img src=\"images/t2fig2b.png\" alt=\"Figure 2b\"> </td>\n",
+    "</tr></table>"
+   ]
   },
   {
    "attachments": {},
@@ -91,11 +105,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<table><tr>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "<td> <img src=\"images/t2fig3a.png\" alt=\"Figure 3a\"> </td>\n",
+    "<td> <img src=\"images/t2fig3b.png\" alt=\"Figure 3b\"> </td>\n",
+    "</tr></table>"
+   ]
   },
   {
    "attachments": {},
@@ -126,11 +153,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<table>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "<tr>\n",
+    "<td> <img src=\"images/t2fig4a.png\" alt=\"Figure 4a\"> </td>\n",
+    "<td> <img src=\"images/t2fig4b.png\" alt=\"Figure 4b\"> </td>\n",
+    "</tr><tr>\n",
+    "<td> a. Selection of area to retrieve field from</td>\n",
+    "<td> b. Selection of field within the area</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
   },
   {
    "attachments": {},
@@ -155,6 +199,30 @@
    "metadata": {},
    "source": [
     "Regardless of how you specify the field, you will need to choose a unique field name after defining the geometry. Then click **Save Changes** to create the field or **Cancel** if you don't want to create it."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "<tr>\n",
+    "<td> <img src=\"images/t2fig5a.png\" alt=\"Figure 5a\"> </td>\n",
+    "<td> <img src=\"images/t2fig5b.png\" alt=\"Figure 5b\"> </td>\n",
+    "</tr><tr>\n",
+    "<td> a. Rectangle selection</td>\n",
+    "<td> b. Polygon selection</td>\n",
+    "</tr>\n",
+    "</table>"
    ]
   },
   {
@@ -201,11 +269,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Figure 6](images/t2fig6.png)"
+   ]
   },
   {
    "attachments": {},
@@ -242,11 +311,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<table>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "<tr>\n",
+    "<td> <img src=\"images/t2fig7a.png\" alt=\"Figure 7a\"> </td>\n",
+    "<td> <img src=\"images/t2fig7b.png\" alt=\"Figure 7b\"> </td>\n",
+    "</tr><tr>\n",
+    "<td> a. Deleting via context menu</td>\n",
+    "<td> b. Deleting via checkbox</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
   },
   {
    "attachments": {},
@@ -283,11 +369,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<table><tr>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "<td> <img src=\"images/t2fig8a.png\" alt=\"Figure 8a\"> </td>\n",
+    "<td> <img src=\"images/t2fig8b.png\" alt=\"Figure 8b\"> </td>\n",
+    "</tr></table>"
+   ]
   },
   {
    "attachments": {},
@@ -317,11 +416,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<table>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "<tr>\n",
+    "<td> <img src=\"images/t2fig9a.png\" alt=\"Figure 9a\"> </td>\n",
+    "<td> <img src=\"images/t2fig9b.png\" alt=\"Figure 9b\"> </td>\n",
+    "</tr><tr>\n",
+    "<td> a. Rectangle selection</td>\n",
+    "<td> b. Polygon selection</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
   },
   {
    "attachments": {},
@@ -367,11 +483,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Figure 10](images/t2fig10.png)"
+   ]
   },
   {
    "attachments": {},
@@ -408,11 +525,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<table>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "<tr>\n",
+    "<td> <img src=\"images/t2fig11a.png\" alt=\"Figure 11a\"> </td>\n",
+    "<td> <img src=\"images/t2fig11b.png\" alt=\"Figure 11b\"> </td>\n",
+    "</tr><tr>\n",
+    "<td> a. Deleting via context menu</td>\n",
+    "<td> b. Deleting via checkbox</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
   },
   {
    "attachments": {},
@@ -446,11 +580,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<table>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 500px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "<tr>\n",
+    "<td> <img src=\"images/t2fig12a.png\" alt=\"Figure 12a\"> </td>\n",
+    "<td> <img src=\"images/t2fig12b.png\" alt=\"Figure 12b\"> </td>\n",
+    "</tr><tr>\n",
+    "<td> a. Fields boundaries</td>\n",
+    "<td> b. Crop type</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
   },
   {
    "attachments": {},
@@ -485,11 +636,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<table>\n",
+    "<style>\n",
+    "td, th {\n",
+    "   border: none!important;\n",
+    "   table-layout: fixed;\n",
+    "   width: 350px;\n",
+    "   vertical-align: top;\n",
+    "}\n",
+    "</style>\n",
+    "<tr>\n",
+    "<td> <img src=\"images/t2fig13a.png\" alt=\"Figure 13a\"> </td>\n",
+    "<td> <img src=\"images/t2fig13b.png\" alt=\"Figure 13b\"> </td>\n",
+    "<td> <img src=\"images/t2fig13c.png\" alt=\"Figure 13c\"> </td>\n",
+    "</tr><tr>\n",
+    "<td> a. Opening reports tab</td>\n",
+    "<td> b. Specifying options</td>\n",
+    "<td> c. Pending requests</td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
   },
   {
    "attachments": {},
@@ -512,11 +682,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Figure 14](images/t2fig14.png)"
+   ]
   },
   {
    "attachments": {},
@@ -525,11 +696,6 @@
    "source": [
     "*Figure 14. An example of viewing reports - field boundaries are superimposed on a translucent crop type map*"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -539,7 +705,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
