--- a/components/tci_ndvi/TCI_NDVI.ipynb
+++ b/components/tci_ndvi/TCI_NDVI.ipynb
@@ -113,13 +113,13 @@
     "START_DATE=os.getenv('START_DATE')\n",
     "END_DATE=os.getenv('END_DATE')\n",
     "AOI=os.getenv('AOI')\n",
+    "\n",
     "SENTINEL2_GOOGLE_API_KEY=os.getenv('SENTINEL2_GOOGLE_API_KEY')\n",
     "SATELLITE_CACHE_FOLDER=os.getenv('SENTINEL2_CACHE')\n",
     "OUTPUT_FOLDER=os.getenv('OUTPUT_FOLDER')"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "51789533",
    "metadata": {
@@ -183,23 +183,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abfd0c28",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:16.986761Z",
-     "iopub.status.busy": "2022-11-12T16:40:16.986274Z",
-     "iopub.status.idle": "2022-11-12T16:40:26.070185Z",
-     "shell.execute_reply": "2022-11-12T16:40:26.068624Z"
-    },
-    "papermill": {
-     "duration": 9.122392,
-     "end_time": "2022-11-12T16:40:26.073310",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:16.950918",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "id": "2b170763",
+   "metadata": {},
    "outputs": [],
    "source": [
     "s2overlap = Sentinel2Overlap(aoi_path=aoi_filename)\n",
@@ -252,56 +237,6 @@
     "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 10.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
     "\n",
     "LAYERS = ['TCI', 'NDVI', ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "420a2773",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:26.254486Z",
-     "iopub.status.busy": "2022-11-12T16:40:26.253328Z",
-     "iopub.status.idle": "2022-11-12T16:40:26.262897Z",
-     "shell.execute_reply": "2022-11-12T16:40:26.261497Z"
-    },
-    "papermill": {
-     "duration": 0.035863,
-     "end_time": "2022-11-12T16:40:26.266706",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:26.230843",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "START_DATE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64cfd3e8",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-12T16:40:26.310692Z",
-     "iopub.status.busy": "2022-11-12T16:40:26.309799Z",
-     "iopub.status.idle": "2022-11-12T16:40:26.319259Z",
-     "shell.execute_reply": "2022-11-12T16:40:26.317659Z"
-    },
-    "papermill": {
-     "duration": 0.033832,
-     "end_time": "2022-11-12T16:40:26.322726",
-     "exception": false,
-     "start_time": "2022-11-12T16:40:26.288894",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "END_DATE"
    ]
   },
   {
@@ -728,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14d73568",
+   "id": "d1949512",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-11-12T16:41:27.683168Z",
@@ -928,13 +863,12 @@
     "        out_image, out_transform = rasterio.mask.mask(src, [polygon], crop=True)\n",
     "        # print(out_transform)\n",
     "        out_meta = src.meta\n",
-    "        \n",
+    "\n",
     "        out_meta.update(driver='GTiff',\n",
     "                        height=out_image.shape[1],\n",
     "                        width=out_image.shape[2],\n",
     "                        transform=out_transform,\n",
     "                        nodata=0, )\n",
-    "\n",
     "    with rasterio.open(output_path, \"w\", **out_meta) as dest:\n",
     "        dest.update_tags(start_date=date, end_date=date)\n",
     "        if name:\n",
@@ -1133,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3788e04f",
+   "id": "72720a33",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-11-12T16:41:28.503091Z",
@@ -1162,7 +1096,7 @@
     "ndvi_images = []\n",
     "for row in overlap_tiles.itertuples():\n",
     "    tile = row.Name\n",
-    "    polygon = row.geometry\n",
+    "    polygon = aoi.geometry[0]\n",
     "    if not tile in filtered:\n",
     "        tile_geojson_path = os.path.join(OUTPUT_FOLDER, \"%s_aoi.geojson\" % tile)\n",
     "        print(\"No data loaded for tile\", tile)\n",
@@ -1209,24 +1143,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dea3340",
-   "metadata": {
-    "papermill": {
-     "duration": 0.024952,
-     "end_time": "2022-11-12T16:42:00.871555",
-     "exception": false,
-     "start_time": "2022-11-12T16:42:00.846603",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "id": "2725df7e",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1240,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.8.15"
   },
   "papermill": {
    "default_parameters": {},
